bin/debug/log.txt
[1mmain.cpp:18:18: [0m[0;1;31merror: [0m[1mexpected expression[0m
   18 |         op<index>;[0m
      | [0;1;32m                 ^
[0m[1mmain.cpp:19:9: [0m[0;1;31merror: [0m[1mno matching function for call to 'for_constexpr_impl'[0m
   19 |         for_constexpr_impl<from,to,index+add>(std::forward<[0;34mdecltype[0m(op)>(op));[0m
      | [0;1;32m        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[0m[1mmain.cpp:29:9: [0m[0;1;36mnote: [0min instantiation of function template specialization 'for_constexpr_impl<1, 3, 1, 1, (lambda at main.cpp:36:13) &>' requested here[0m
   29 |         for_constexpr_impl<from,to,add,from>(op);[0m
      | [0;1;32m        ^
[0m[1mmain.cpp:38:5: [0m[0;1;36mnote: [0min instantiation of function template specialization 'for_constexpr<1, 3, 1, (lambda at main.cpp:36:13) &>' requested here[0m
   38 |     for_constexpr<[0;32m1[0m,[0;32m3[0m>(t);[0m
      | [0;1;32m    ^
[0m[1mmain.cpp:13:16: [0m[0;1;36mnote: [0mcandidate template ignored: couldn't infer template argument 'index'[0m
   13 | [0;34mconstexpr[0m [0;34mvoid[0m for_constexpr_impl ( [0;34mauto[0m&& op )[0m
      | [0;1;32m               ^
[0m2 errors generated.
